# portfolio-review-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  demo_seeder.py  main.py  schemas.py  service.py
app/static/: styles.css
app/templates/: index.html
tests/: conftest.py  test_api.py  test_data_quality.py  test_demo_seeder.py  test_service.py
